# gobject

./: README.md  example-person-private.h  example-person.c  example-person.h
example-person/: example-person.c  example-person.h
shape/: CMakeLists.txt  circle.c  circle.h  main.c  rectangle.c  rectangle.h  shape.c  shape.h
shape/temp/: circle_c.i  circle_h.i  rectangle_c.i  rectangle_h.i  shape_c.i  shape_h.i
